# CubeSimulator

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/cubesimulator/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Application.cpp  Application.h  CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  android_log.h  main.cpp
app/src/main/java/com/example/cubesimulator/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/cubesimulator/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
